cilium-migration/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.internal.fferrando.cc`)
      kind: Rule
      middlewares:
        - name: hubble-auth
      services:
        - name: hubble-ui
          port: 80

  tls:
    secretName: hubble-internal-tls
